# desktop-pet

./: .gitignore  AGENTS.md  AI_COMPANION_SYSTEM_PLAN.md  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  THIRD_PARTY_NOTICES.md  design-qa.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  桌宠开发者项目需求与外观制作规范.md
docs/: ASSET_RIGHTS.md  (+27 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.updater.conf.json
src-tauri/capabilities/: appearance.json  default.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: begin_character_activation.toml  cancel_character_selection.toml  cancel_pending_update.toml  check_for_update.toml  commit_character_selection.toml  download_update.toml  export_diagnostics.toml  finalize_character_selection.toml  flush_application_logs.toml  get_selected_character_id.toml  get_updater_configuration.toml  import_character_package.toml  install_update.toml  list_installed_characters.toml  load_installed_character.toml  open_log_directory.toml  quarantine_invalid_settings_file.toml  quit_app.toml  read_settings_file.toml  remove_installed_character.toml  request_character_selection.toml  restore_main_window.toml  set_active_character_id.toml  set_fullscreen_auto_hide.toml  set_pet_interaction_region.toml  show_appearance_window.toml  show_pet_context_menu.toml  show_settings_window.toml  sync_native_menu_state.toml  write_settings_file.toml
src-tauri/src/: character_catalog.rs  diagnostics.rs  lib.rs  main.rs
src-tauri/src/updater/: mod.rs
(+179 files in other folders)
